# rust-blog-backend

./: .env  Cargo.toml  README.md  Rocket.toml  diesel.toml  info
migrations/2024-09-25-084100_create_users/: up.sql
migrations/2024-09-25-091231_create_blog_posts/: up.sql
src/: api.rs  auth.rs  main.rs  model.rs  repo.rs  schema.rs
